# panel-cutting

./: .gitignore  README.md  input.csv  main.py  pyproject.toml
